crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@176.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_exp_mul VALUES (3,8,'-512385513828318260570283740065493064477880918352.732624553690077857674083796435724202494963885926573907185100543184828131859183999195040110586155435203949963570735841632689374488877298209082579317039061893012560130258753218955057387206477423088065663401594359617882154814262843273526859406265633827109554791772242178864873774889091687515990672487380368975556580539271333144212685871370972163560839446696514092637412587953506052848750866803569213269271165856310101244342151576488190595936869490659700946174362872797854591188391982770203203644172999264143929484089237665313698600170041324566984832357000400');"
---
InsertStmt@0..645
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..23
    Ident@12..23 "num_exp_mul"
  Whitespace@23..24 " "
  SelectStmt@24..643
    Values@24..30 "VALUES"
    Whitespace@30..31 " "
    Ascii40@31..32 "("
    List@32..643
      AConst@32..33
        Iconst@32..33 "3"
      Ascii44@33..34 ","
      AConst@34..35
        Iconst@34..35 "8"
      Ascii44@35..36 ","
      AConst@36..643
        Sconst@36..643 "'-5123855138283182605 ..."
  Ascii41@643..644 ")"
  Ascii59@644..645 ";"

