crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@18.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE num_exp_log10 (id int4, expected numeric(1000,800));"
---
CreateStmt@0..65
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..26
    Ident@13..26 "num_exp_log10"
  Whitespace@26..27 " "
  Ascii40@27..28 "("
  ColumnDef@28..35
    Ident@28..30 "id"
    Whitespace@30..31 " "
    TypeName@31..35
      Ident@31..35 "int4"
  Ascii44@35..36 ","
  Whitespace@36..37 " "
  ColumnDef@37..62
    Ident@37..45 "expected"
    Whitespace@45..46 " "
    TypeName@46..62
      Numeric@46..53 "numeric"
      Ascii40@53..54 "("
      AConst@54..58
        Iconst@54..58 "1000"
      Ascii44@58..59 ","
      AConst@59..62
        Iconst@59..62 "800"
  Ascii41@62..63 ")"
  Ascii41@63..64 ")"
  Ascii59@64..65 ";"

